# trussfemsolver

./: .gitignore  CMakeLists.txt  README.md
include/: MeshReader.h  MeshStructure.h  Simulation.h
src/: MeshReader.cpp  Simulation.cpp
test/: test_simulations.cpp
testfiles/: 1trussin2d.mail  1trussin3d.mail  bridgetruss3Dchp21.mail  radialtruss3d.mail  truss2D.mail  truss2din3d.mail
